Pandoc / markdown thesis template for UCD
- pandoc template in default.thesis (based on default.latex)

- revise chapter workflow so that you specify titles separately (this makes
it easier to pull in outside chapters).

- use pandoc-crossref but NOT citeproc.  Note, though that this does NOT work
with subfigure syntax in pandoc-crossref as that collides with our use of
subcaption

--- a/ucdthesis.cls
+++ b/ucdthesis.cls
@@ -368,25 +368,25 @@
     
     \ifnum \@iselectronic > 0
       \vspace{\@approvalspace}
-      $\:\overline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
+      $\:\underline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
 		\@chair, Chair \\
 
 		\foreach \member in \othermembers
 			{
       \vspace{\@approvalspace}
-      $\:\overline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
+      $\:\underline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
 			\member \\
 			}
 		\vspace{\@approvalspace}
 		
 	\else
       \vspace{\@approvalspace}
-      $\:\overline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
+      $\:\underline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
 			
 		\foreach \member in \othermembers
 			{
       \vspace{\@approvalspace}
-      $\:\overline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
+      $\:\underline{~~~~ \mbox{\rule{0in}{0.16in}\small ~\hspace{3.0in}}}\:$ \\
 			}
 \fi
 
